--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
 
   <!-- Estilos de Bootstrap y CSS personalizado -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
   <link href="css/styles.css" rel="stylesheet">
 
 </head>
 
 <body class="container-fluid p-4">
+  <div class="d-flex justify-content-end mb-3">
+  <button id="themeToggle" class="btn btn-outline-dark"><i id="themeIcon" class="bi bi-moon-fill"></i></button>
+</div>
   <div class="row">
     <!-- Columna izquierda: Caja Pokémon -->
     <div class="col-md-8">
@@ -67,19 +71,19 @@
   <div class="d-flex flex-wrap gap-3 align-items-center">
     <div class="d-flex align-items-center gap-2">
       <select id="move1" class="form-select" required></select>
-      <img id="icon1" src="images/types/mystery.svg" alt="tipo" class="type-icon" style="width:32px; height:32px;">
+      <img id="icon1" src="images/types/mystery.svg" alt="tipo movimiento 1" class="type-icon" style="width:32px; height:32px;">
     </div>
     <div class="d-flex align-items-center gap-2">
       <select id="move2" class="form-select" ></select>
-      <img id="icon2" src="images/types/mystery.svg" alt="tipo" class="type-icon" style="width:32px; height:32px;">
+      <img id="icon2" src="images/types/mystery.svg" alt="tipo movimiento 2" class="type-icon" style="width:32px; height:32px;">
     </div>
     <div class="d-flex align-items-center gap-2">
       <select id="move3" class="form-select" ></select>
-      <img id="icon3" src="images/types/mystery.svg" alt="tipo" class="type-icon" style="width:32px; height:32px;">
+      <img id="icon3" src="images/types/mystery.svg" alt="tipo movimiento 3" class="type-icon" style="width:32px; height:32px;">
     </div>
     <div class="d-flex align-items-center gap-2">
       <select id="move4" class="form-select" ></select>
-      <img id="icon4" src="images/types/mystery.svg" alt="tipo" class="type-icon" style="width:32px; height:32px;">
+      <img id="icon4" src="images/types/mystery.svg" alt="tipo movimiento 4" class="type-icon" style="width:32px; height:32px;">
     </div>
   </div>
     </div>
@@ -88,16 +92,21 @@
     <div class="mb-3">
       <label for="ability" class="form-label">Habilidad</label>
       <select class="form-select" id="ability">
-        <option>Electricidad Estática</option>
-        <option>Mar Llamas</option>
-        <option>Torrente</option>
-        <option>Espesura</option>
+
       </select>
     </div>
 
     <!-- Botón para agregar el nuevo/editado pokémon -->
-        <button type="submit" class="btn btn-primary">Añadir a la Caja</button>
+        <button type="submit" id="crearPokemonBtn" class="btn btn-primary">Añadir a la Caja</button>
+        
+        <!-- Botón para limpiar el formulario de pokémon manualmente-->
+        <button type="button" class="btn btn-secondary" id="limpiarFormularioBtn">Limpiar formulario</button>
+        
+        <!-- Botón para eliminar el pokémon -->
+        <button type="button" id="deletePokemon" class="btn btn-danger"><i class="bi bi-trash3-fill"></i></button>
       </form>
+
+
     </div>
   </div>
 
@@ -106,11 +115,13 @@
   <script type="module" src="js/firebaseConfig.js"></script>
   <script type="module" src="js/firebaseDatos.js"></script>
   <script type="module" src="js/cajasPc.js"></script>
+  <script src="js/scriptsUsuario.js"></script>
+
 
   <script type="module">
     //Cargamos las funciones de firebaseDatos para llenar el formulario
     import { cargarPokedex, cargarFormas, cargarMovimientos, cargarHabilidades, subirMovimientos, subirHabilidades } from "./js/firebaseDatos.js";
-    import { actualizarImagenPokemon, pokedex  } from "./js/cajasPc.js"
+    import { actualizarImagenPokemon,  pokedex  } from "./js/cajasPc.js"
 
     // Cuando el usuario elige un pokémon, se cargan las formas disponibles de este pokémon
     speciesInput.addEventListener("change", () => {
@@ -129,6 +140,7 @@
 
       speciesInput.addEventListener("change", actualizarImagenPokemon);
       formasSelect.addEventListener("change", actualizarImagenPokemon);
+
     });
   </script>
 </body>
