Creada sección para formar tu equipo, donse se muestra un resumen de cada pokémon. Se ha agregado el DataModel "Movimiento"

--- a/index.html
+++ b/index.html
@@ -110,12 +110,19 @@
     </div>
   </div>
 
+  <!-- Contenedor de recuadros para añadir Pokémon seleccionados -->
+  <h4 class="mt-5">Equipo Pokémon</h4>
+    <div id="recuadrosEquipoContainer" class="d-flex flex-wrap gap-3">
+    <!-- Los recuadros se generarán con javascript -->
+    </div>
 
     <!-- Scripts -->
   <script type="module" src="js/firebaseConfig.js"></script>
   <script type="module" src="js/firebaseDatos.js"></script>
   <script type="module" src="js/cajasPc.js"></script>
   <script src="js/scriptsUsuario.js"></script>
+  <script type="module" src="js/organizarEquipo.js"></script>
+
 
 
   <script type="module">
