Agregado pie de página

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     </div>
   </div>
 
-  <div class="row">
+  <div class="d-flex justify-content-center align-items-start gap-4 flex-wrap">
     <!-- Columna izquierda: Caja Pokémon -->
-    <div class="col-md-8">
+    <div class="col-md-5">
       <div class="d-flex justify-content-between align-items-center mb-3">
         <button id="prevBox" class="btn btn-outline-secondary">&larr;</button>
         
@@ -182,6 +182,34 @@
     </div>
   </div>
 </div>
+
+  <!-- ===== Pie de página ===== -->
+<footer class="footer mt-5 py-3">
+  <div class="container text-center footer-text">
+      <p class="mb-1">
+        Thanks to 
+        <a href="https://github.com/PokeAPI/sprites" target="_blank">PokéAPI</a> for Pokémon sprites
+      </p>
+      <p class="mb-1">
+        Thanks to 
+        <a href="https://pokemondb.net/tools/text-list" target="_blank">Pokemondb</a> 
+        for all Pokémon names list and types database
+      </p>
+      <p class="mb-1">
+        Thanks to 
+        <a href="https://www.wikidex.net/wiki/WikiDex" target="_blank">Wikidex</a>, 
+        <a href="https://bulbagarden.net/home" target="_blank">Bulbapedia</a>, 
+        <a href="https://www.pokepedia.fr/Portail:Accueil" target="_blank">Poképedia</a>, 
+        <a href="https://wiki.pokemoncentral.it" target="_blank">Pokecentral</a>, 
+        <a href="https://www.pokewiki.de/Hauptseite" target="_blank">Pokewiki</a> 
+        for Pokémon names, forms, moves and abilities info
+      </p>
+      <p class="mb-0">
+        Thanks to <span class="fw-bold">@camunza</span> for the favicon for my web
+      </p>
+    </div>
+  </footer>
+
 
 
 <!--== Modal de Login/Registro -->
