Se han actualizado las diferentes formas y megaevoluciones que pueden tener los pokémon de la región de Kanto

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <title>Lorei Pokemon Team Planner</title>
   <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
+  <!-- Url canónica para indexación -->
+  <link rel="canonical" href="https://lorei-pokemon-team-planner.web.app/" />
+
   <!-- Estilos de Bootstrap y CSS personalizado -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
