Actualizadas las diferentes formas que pueden tener los pokémon de la región de Johto, y agregado nuevo panel admin para facilitar la subida de nuevas formas

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
   <div class="container text-center footer-text">
       <p class="mb-1">
         Thanks to 
-        <a href="https://github.com/PokeAPI/sprites" target="_blank">PokéAPI</a> for Pokémon sprites
+        <a href="https://github.com/PokeAPI/sprites" target="_blank">PokéAPI</a> and <a href="https://www.deviantart.com/kingofthe-x-roads" target="_blank">KingOfThe-X-Roads</a> for Pokémon sprites
       </p>
       <p class="mb-1">
         Thanks to 
