Actualizadas formas de tercera y cuarta generación

--- a/admin/formularioPokemonForms.html
+++ b/admin/formularioPokemonForms.html
@@ -123,7 +123,7 @@
   <input type="text" id="en" name="en" required>
 
   <label for="forma">forma:</label>
-  <input type="text" id="forma" name="forma" required>
+  <input type="text" id="forma" name="forma">
 
   <label for="fr">fr:</label>
   <input type="text" id="fr" name="fr" required>
@@ -187,8 +187,8 @@
 
 </form>
     <!-- Botón extra: inserta todos los Unown de golpe -->
-  <button type="button" id="btn-bulk-unown">
+  <!--button type="button" id="btn-bulk-unown">
     Insertar todos los Unown
-  </button>
+  </button-->
 </body>
 </html>
